--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ pygoodwe==0.0.14
 Flask==1.1.2
 Flask-RESTful==0.3.8
 gunicorn==20.0.4
+image==1.5.32
+tesseract==0.1.3
+numpy==1.19.2
+pillow==7.2.0
